[package]
name = "glint"
version = "0.1.0"
edition = "2021"
description = "Glint is a next-generation native Windows photo viewer and lightweight editor built entirely in Rust with a strict focus on speed, responsiveness, efficiency, and simplicity."
authors = ["Samin Yeasar <samin@mentormind.bd>"]
repository = "https://github.com/solez-ai/glint"
homepage = "https://github.com/solez-ai/glint"
license = "MIT"
readme = "README.md"
keywords = ["image-viewer", "photo-viewer", "windows", "rust", "native"]
categories = ["multimedia::images", "gui"]

[features]
default = ["wgpu"]
wgpu = ["egui-wgpu", "eframe/wgpu"]
glow = ["eframe/glow"]

[dependencies]
# Core framework
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui-wgpu = { version = "0.31", optional = true }
wgpu = "24"
# Image decoding and processing
image = { version = "0.25", features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
    "ico",
    "avif",
    "hdr",
    "dds",
    "exr",
    "tga",
] }
fast_image_resize = "5"

# Parallelism and threading
rayon = "1"

# Database and caching
rusqlite = { version = "0.34", features = ["bundled"] }

# Raw byte conversion
bytemuck = "1"

# File system watching
notify = "8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# LRU cache
lru = "0.12"

# Directories (cache, config paths)
dirs = "6"

# Crossbeam channels
crossbeam-channel = "0.5"

# Native file dialogs
rfd = { version = "0.15" }

# Open files in system viewer
open = "5"
kamadak-exif = "0.6.1"

# Windows platform integration
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[workspace]
